<resources>
    <string name="app_name">RASD</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="enter_your_credentials_to_continue">Enter your credentials to continue.</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="or_connect_via">Or connect via</string>
    <string name="create_account">Create account!</string>
    <string name="register_to_get_started">Register to get started.</string>
    <string name="name">Name</string>
    <string name="register">Register</string>
    <string name="phone_number">Phone Number</string>
    <string name="rasd">RASD</string>
</resources>