<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/background"
tools:context=".register_info">

<TextView
    android:id="@+id/textView2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="Welcome"
    android:textSize="26sp"
    android:textStyle="bold"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.153"
    app:layout_constraintHorizontal_bias="0.11"/>



<TextView
    android:id="@+id/textView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"

    android:text="@string/register_to_get_started"
    android:textColor="@color/lightfont"
    android:textSize="16sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintHorizontal_bias="0.13"
    app:layout_constraintVertical_bias="0.2"/>

<com.google.android.material.textfield.TextInputEditText
    android:id="@+id/name"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/input_back"
    android:hint="@string/name"
    android:paddingStart="20dp"
    android:paddingTop="9dp"
    android:paddingEnd="260dp"
    android:paddingBottom="9dp"

    android:textSize="18sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textView"
    app:layout_constraintVertical_bias="0.069" />


<com.google.android.material.textfield.TextInputEditText
    android:id="@+id/email"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/input_back"
    android:hint="Email"
    android:paddingStart="20dp"
    android:paddingTop="9dp"
    android:paddingEnd="260dp"
    android:paddingBottom="9dp"

    android:textSize="18sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.506"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textView"
    app:layout_constraintVertical_bias="0.188" />

<com.google.android.material.textfield.TextInputEditText
    android:id="@+id/rid"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/input_back"
    android:hint="Robot ID"
    android:paddingStart="20dp"
    android:paddingTop="9dp"
    android:paddingEnd="234dp"
    android:paddingBottom="9dp"
    android:textSize="18sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.545"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textView"
    app:layout_constraintVertical_bias="0.308" />

<com.google.android.material.textfield.TextInputEditText
    android:id="@+id/pno"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/input_back"
    android:hint="@string/phone_number"
    android:paddingStart="20dp"
    android:paddingTop="9dp"
    android:paddingEnd="180dp"
    android:paddingBottom="9dp"

    android:textSize="18sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.578"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textView"
    app:layout_constraintVertical_bias="0.422" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btnbkg"
        android:paddingStart="130dp"
        android:paddingEnd="130dp"
        android:text="@string/register"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rid"
        app:layout_constraintVertical_bias="0.282" />

    <TextView

        android:id="@+id/textView3"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:text="Already Have a account? Login"
        android:textColor="@color/lightfont"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.963" />

</androidx.constraintlayout.widget.ConstraintLayout>